--- a/app/SINE/app/src/main/res/layout/activity_favorite.xml
+++ b/app/SINE/app/src/main/res/layout/activity_favorite.xml
@@ -1,86 +1,115 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_favorite"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="trabalho.sine.FavoriteActivity">
 
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:background="@color/colorPrimary">
-
-        <TextView
-            android:text="Filtro:"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView2"
-            android:textSize="16dp"
-            android:textColor="#fff"
-            android:layout_weight="1" />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <LinearLayout
-            android:layout_width="310dp"
-            android:layout_height="44dp">
+            android:id="@+id/container_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-            <RadioGroup
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <LinearLayout
-                    android:layout_width="100dp"
-                    android:layout_height="45dp">
-                    <RadioButton
-                        android:text="Sem Filtro"
-                        android:id="@+id/semfiltro"
-                        android:textColor="#fff"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:checked="true"
-                        android:onClick="onRadioButtonClicked"/>
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="100dp"
-                    android:layout_height="45dp">
-                    <RadioButton
-                        android:text="Ultimas Vagas"
-                        android:id="@+id/ultimasvagas"
-                        android:textColor="#fff"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:onClick="onRadioButtonClicked"/>
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="100dp"
-                    android:layout_height="45dp">
-                    <RadioButton
-                        android:text="Maior Salario"
-                        android:id="@+id/maiorsalario"
-                        android:textColor="#fff"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:onClick="onRadioButtonClicked"/>
-                </LinearLayout>
-
-            </RadioGroup>
-
+            <include
+                android:id="@+id/toolbar"
+                layout="@layout/toolbar" />
         </LinearLayout>
 
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:text="Filtro:"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView2"
+                android:textSize="16dp"
+                android:textColor="@color/fonte"
+                android:layout_weight="1" />
+
+
+            <LinearLayout
+                android:layout_width="310dp"
+                android:layout_height="44dp">
+
+
+                <RadioGroup
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+
+                    <LinearLayout
+                        android:layout_width="100dp"
+                        android:layout_height="45dp">
+                        <RadioButton
+                            android:text="Sem Filtro"
+                            android:id="@+id/semfiltro"
+                            android:textColor="@color/fonte"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:checked="true"
+                            android:onClick="onRadioButtonClicked"/>
+                    </LinearLayout>
+
+
+                    <LinearLayout
+                        android:layout_width="100dp"
+                        android:layout_height="45dp">
+                        <RadioButton
+                            android:text="Ultimas Vagas"
+                            android:id="@+id/ultimasvagas"
+                            android:textColor="@color/fonte"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:onClick="onRadioButtonClicked"/>
+                    </LinearLayout>
+
+
+                    <LinearLayout
+                        android:layout_width="100dp"
+                        android:layout_height="45dp">
+                        <RadioButton
+                            android:text="Maior Salario"
+                            android:id="@+id/maiorsalario"
+                            android:textColor="@color/fonte"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:onClick="onRadioButtonClicked"/>
+                    </LinearLayout>
+
+                </RadioGroup>
+
+            </LinearLayout>
+        </LinearLayout>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/list_empregos_favoritos"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scrollbars="vertical"
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin"/>
     </LinearLayout>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/list_empregos_favoritos"
-        android:layout_width="match_parent"
+    <fragment
+        android:id="@+id/fragment_navigation_drawer_favorite"
+        android:name="trabalho.sine.activity.FragmentDrawer"
+        android:layout_width="@dimen/nav_drawer_width"
         android:layout_height="match_parent"
-        android:scrollbars="vertical"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"/>
-
-</LinearLayout>
+        android:layout_gravity="start"
+        app:layout="@layout/fragment_navigation_drawer"
+        tools:layout="@layout/fragment_navigation_drawer" />
+</android.support.v4.widget.DrawerLayout>
