--- a/app/SINE/app/src/main/res/layout/activity_main.xml
+++ b/app/SINE/app/src/main/res/layout/activity_main.xml
@@ -35,7 +35,7 @@
                 android:layout_marginLeft="1dp"
                 android:layout_marginRight="1dp"
                 android:layout_marginTop="10dp"
-                android:background="@color/button"
+                android:background="#757575"
                 android:onClick="searchActivity">
 
 
@@ -113,12 +113,12 @@
                 android:layout_marginLeft="1dp"
                 android:layout_marginRight="1dp"
                 android:layout_marginTop="5dp"
-                android:onClick="searchForGraphicActivity"
+                android:onClick="graphicActivity"
                 android:layout_weight="77.75">
 
 
                 <TextView
-                    android:text="@string/nav_item_search_payment"
+                    android:text="@string/favorite_vaga"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
@@ -154,7 +154,4 @@
         android:layout_gravity="start"
         app:layout="@layout/fragment_navigation_drawer"
         tools:layout="@layout/fragment_navigation_drawer" />
-
-
-
 </android.support.v4.widget.DrawerLayout>
