--- a/app/SINE/app/src/main/res/values/colors.xml
+++ b/app/SINE/app/src/main/res/values/colors.xml
@@ -6,5 +6,5 @@
     <color name="windowBackground">#FFFFFF</color>
     <color name="navigationBarColor">#000000</color>
     <color name="colorAccent">#01579b</color>
-    <color name="button">#757575</color>
+    <color name="fonte">#757575</color>
 </resources>
